<resources>

    <!--App configurations-->
    <string name="app_name">Spontaneous</string>
    <string name="action_settings">Settings</string>
    <string name="app_name_caps">SPONTANEOUS</string>
    <string name="app_slogan">MAKE EVERY EVENT EPIC</string>

    <!--Main Activity-->
    <string name="event_button_toolbar">This button represents the events fragment in the main activity.</string>
    <string name="user_profile_button_toolbar">This button represents the userProfile profile fragment in the main activity.</string>

    <!--Login Page-->
    <string name="login_with_facebook">Login with Facebook</string>

    <!--Dependencies-->
    <string name="facebook_app_id">1643579359242605</string>
    <string name="google_api_key">AIzaSyA3HLsaOVY6sa72JWS7RTnI1JsrIsx4Avc</string>

    <!--Server Messages-->
    <string name="error_network">Network Error</string>
    <string name="error_no_response">No Response Error</string>
    <string name="error_network_http_error">HTTP Error</string>
    <string name="error_unknown">Unknown Error</string>

    <!--Intent extras-->
    <string name="created_event_intent_extra">com.spontaneous.android.CREATED_EVENT</string>
    <string name="event_card_intent_extras">com.spontaneous.android.EVENT_CARD</string>
    <string name="update_item_bringing">com.spontaneous.android.UPDATE_ITEM_BRINGING</string>
    <string name="update_item_not_bringing">com.spontaneous.android.UPDATE_ITEM_NOT_BRINGING</string>
    <string name="is_bringing_item">com.spontaneous.android.IS_BRINGING_ITEM</string>
    <string name="assigned_item_data">com.spontaneous.android.ITEM_DATA</string>

    <!--    Event Creation Wizard-->
    <string name="event_title">Event title</string>
    <string name="event_description">Tell us a little bit about the event</string>
    <string name="event_location">Where is the event?</string>
    <string name="event_done">DONE</string>
    <string name="event_guests">Who would you like to invite?</string>
    <string name="event_date">Date</string>
    <string name="event_time">Time</string>

    <string name="is_attending_icon_description">This is an icon that shows whether the userProfile attending the event.</string>
    <string name="user_gender_icon_description">This is an icon that shows the gender of the userProfile.</string>

    <!--Event Page-->
    <string name="event_page_date">Date: %1$s</string>
    <string name="event_page_location">Location: %1$s</string>
    <string name="invitation_decline">This button declines arrival to the event.</string>
    <string name="invitation_confirmation">This button confirms arrival to the event.</string>
    <string name="event_invitation">"com.spontaneous.android.EVENT_INVITATION"</string>
    <string name="dialog_textview">What do you have to say about the event?</string>
    <string name="event_edit">Edit</string>
    <string name="user_profile_example_name">ABC</string>
    <string name="user_profile_example_email">abc@abc.com</string>
    <string name="user_profile_example_age">0</string>
    <string name="event_list_example_date">20–3–2014</string>
    <string name="event_list_example_title">Mall Hangout</string>
    <string name="event_list_example_description">Hey guys, We\'re hanging out today in the mall during the evening. We\'re probably gonna play some bowling and catch a movie. Come and have a great time with us!</string>
    <string name="event_list_example_location">Shivaat Hakhohavim Mall, Herzeliya</string>
    <string name="event_card_example_title">Mall Hangout</string>
    <string name="event_card_example_description">Hey guys, We\'re hanging out today in the mall during the evening. We\'re probably gonna play some bowling and catch a movie. Come and have a great time with us!</string>
    <string name="event_card_example_date">When: Tuesday at 20:00, March 20th</string>
    <string name="event_card_example_location">Where: Shiv\'at Hakohavim Mall, Herzeliya</string>
    <string name="event_broadcast_message_string">Notify</string>
    <string name="item_list_example_title">Popcorn</string>
    <string name="list_of_friends_using_spontaneous">List of friends using Spontaneous</string>

    <string name="who_is_coming">Who is coming?</string>
    <string name="required_items">Required Items</string>
    <string name="label_email">Email Address</string>
    <string name="label_password">Password</string>
    <string name="message_loading">Loading</string>
    <string name="logout">Logout</string>
    <string name="no_events">NO EVENTS</string>
</resources>
