<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/save_event_layout">

    <include
        layout="@layout/custom_toolbar"
        android:id="@+id/custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/custom_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/create_event_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/event_title"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/create_event_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/event_description"
                android:imeOptions="actionNext"
                android:inputType="textMultiLine|textCapSentences"
                android:textSize="18sp" />

            <AutoCompleteTextView
                android:id="@+id/create_event_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/event_location"
                android:imeOptions="actionNext"
                android:inputType="textCapWords|textPostalAddress"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/create_event_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/event_date"
                    android:imeOptions="actionNext"
                    android:inputType="datetime"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/create_event_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/event_time"
                    android:imeOptions="actionNext"
                    android:inputType="datetime"
                    android:textSize="18sp" />

            </LinearLayout>

            <com.android.ex.chips.RecipientEditTextView
                android:id="@+id/create_event_guests"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/event_guests"
                android:inputType="textEmailAddress|textMultiLine"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>