<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:text="@string/create_event_title"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/create_event_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/event_title"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/create_event_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/event_description"
            android:imeOptions="actionNext"
            android:inputType="textMultiLine|textCapSentences"
            android:textSize="18sp" />

        <AutoCompleteTextView
            android:id="@+id/create_event_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/event_location"
            android:imeOptions="actionDone"
            android:inputType="textCapWords|textPostalAddress"
            android:textSize="18sp" />

        <Button
            android:id="@+id/create_ride_done"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="Create" />
    </LinearLayout>
</ScrollView>